feat: add support for inner function calls in class declarations and corresponding test